--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
  <head>
      <title>emiilihe2.github.io by EmiiLiHe</title>
-     
+    <link rel="stylesheet" type="text/css" href="purty.css"
  </head>
+     <p>OHOHOHOHO</p>
+     <img src="Images.html/4929565_f260.jpg">
 </html
