--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
      <title>emiilihe2.github.io by EmiiLiHe</title>
     <link rel="stylesheet" type="text/css" href="purty.css"
  </head>
-     <p>OHOHOHOHO</p>
-     <img src="Images.html/4929565_f260.jpg">
+     <p>plant c:</p>
+     <img src="Images.html/strawberry.gif">
+     <b><button type="submit"><button formaction=URL/>ohohoho</button><b>
 </html
