--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<html>
+    <title>STARUBUCKSU</title>
  <head>
      <title>emiilihe2.github.io by EmiiLiHe</title>
     <link rel="stylesheet" type="text/css" href="purty.css"
@@ -6,4 +7,4 @@
      <p>plant c:</p>
      <img src="Images.html/strawberry.gif">
      <b><button type="submit"><button formaction=URL/>ohohoho</button><b>
-</html
+</html>
